--- a/index.html
+++ b/index.html
@@ -5,24 +5,23 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link href="./_app/immutable/assets/0.ETk2JMIw.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/2.B35Ywr4v.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.3WC8jwyn.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.pvFRsYqX.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.Bmg8oFKD.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.D_GRTHN4.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.Bp5a15iE.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.Bg54FWaG.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.oRLtlXf_.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.D0ZxqsFo.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.DDpNxgZC.js"><title>Home</title><!-- HEAD_svelte-t32ptj_START --><meta name="description" content="Svelte demo app"><!-- HEAD_svelte-t32ptj_END -->
+		<link href="./_app/immutable/assets/0.D0Ixt5yt.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/2.CqbPctQy.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.Cugkm-fu.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Ix3FeIKd.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.Ce_0Mfso.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.Bv9hURXJ.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.yLzZniwc.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.B6roheC6.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.BXoeXnn5.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.eEIZ6DUg.js"><title>Home</title><!-- HEAD_svelte-t32ptj_START --><meta name="description" content="Svelte demo app"><!-- HEAD_svelte-t32ptj_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">  <div class="app svelte-8o1gnw"><header class="svelte-hfqxuf"><nav class="svelte-hfqxuf"><ul class="svelte-hfqxuf"><li aria-current="page" class="svelte-hfqxuf"><a href="/" class="svelte-hfqxuf" data-svelte-h="svelte-5a0zws">Home</a></li> <li class="svelte-hfqxuf"><a href="/about" class="svelte-hfqxuf" data-svelte-h="svelte-iphxk9">About</a></li></ul></nav> </header> <main class="svelte-8o1gnw"> <section class="svelte-39krom"><h1 class="svelte-39krom" data-svelte-h="svelte-zjy4ko">Welcome to your new<br>SvelteKit app</h1> <h2 data-svelte-h="svelte-1e36z0s">try editing <strong>src/routes/+page.svelte</strong></h2> <div class="counter svelte-y96mxt"><button aria-label="Decrease the counter by one" class="svelte-y96mxt" data-svelte-h="svelte-97ppyc"><svg aria-hidden="true" viewBox="0 0 1 1" class="svelte-y96mxt"><path d="M0,0.5 L1,0.5" class="svelte-y96mxt"></path></svg></button> <div class="counter-viewport svelte-y96mxt"><div class="counter-digits svelte-y96mxt" style="transform: translate(0, 0%)"><strong class="hidden svelte-y96mxt" aria-hidden="true">1</strong> <strong class="svelte-y96mxt">0</strong></div></div> <button aria-label="Increase the counter by one" class="svelte-y96mxt" data-svelte-h="svelte-irev0c"><svg aria-hidden="true" viewBox="0 0 1 1" class="svelte-y96mxt"><path d="M0,0.5 L1,0.5 M0.5,0 L0.5,1" class="svelte-y96mxt"></path></svg></button> </div> </section></main> <footer class="svelte-8o1gnw" data-svelte-h="svelte-1dlfr5"><p>visit <a href="https://kit.svelte.dev" class="svelte-8o1gnw">kit.svelte.dev</a> to learn SvelteKit</p></footer> </div> 
+		<div style="display: contents">  <div class="app svelte-8o1gnw"><header class="svelte-1owi7ln"><nav class="svelte-1owi7ln"><ul class="svelte-1owi7ln"><li aria-current="page" class="svelte-1owi7ln"><a href="/" class="svelte-1owi7ln" data-svelte-h="svelte-1pcgfga"><div class="stack svelte-1owi7ln" style="--stacks: 3;"><span style="--index: 0;" class="svelte-1owi7ln">Home</span> <span style="--index: 1;" class="svelte-1owi7ln">Home</span> <span style="--index: 2;" class="svelte-1owi7ln">Home</span></div></a></li> <li class="svelte-1owi7ln"><a href="/about" class="svelte-1owi7ln" data-svelte-h="svelte-4bflkt"><div class="stack svelte-1owi7ln" style="--stacks: 3;"><span style="--index: 0;" class="svelte-1owi7ln">About</span> <span style="--index: 1;" class="svelte-1owi7ln">About</span> <span style="--index: 2;" class="svelte-1owi7ln">About</span></div></a></li> <li class="svelte-1owi7ln"><a href="/resume" class="svelte-1owi7ln" data-svelte-h="svelte-s84fbt"><div class="stack svelte-1owi7ln" style="--stacks: 3;"><span style="--index: 0;" class="svelte-1owi7ln">Resume</span> <span style="--index: 1;" class="svelte-1owi7ln">Resume</span> <span style="--index: 2;" class="svelte-1owi7ln">Resume</span></div></a></li> <li class="svelte-1owi7ln"><a href="/projects" class="svelte-1owi7ln" data-svelte-h="svelte-fuz43h"><div class="stack svelte-1owi7ln" style="--stacks: 3;"><span style="--index: 0;" class="svelte-1owi7ln">Projects</span> <span style="--index: 1;" class="svelte-1owi7ln">Projects</span> <span style="--index: 2;" class="svelte-1owi7ln">Projects</span></div></a></li></ul></nav> </header> <main class="svelte-8o1gnw"> <section class="svelte-1hfch6o" data-svelte-h="svelte-15v7zc9"><div class="video svelte-1hfch6o"><video  autoplay loop muted poster="/_app/immutable/assets/hakone_frame1_awful.wYjVVRWW.jpg" class="svelte-1hfch6o"><source src="/_app/immutable/assets/hakone_park.Ca7bB5dJ.mp4"><track kind="captions"></video> <div class="welcome svelte-1hfch6o">Welcome :)</div></div> </section></main> <footer class="svelte-8o1gnw" data-svelte-h="svelte-clqwh4"><p>Built with <a href="https://kit.svelte.dev" target="_blank" class="svelte-8o1gnw">Svelte</a></p></footer> </div> 
 			
 			<script>
 				{
-					__sveltekit_1otjypp = {
+					__sveltekit_1fofsmr = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -31,8 +30,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.3WC8jwyn.js"),
-						import("./_app/immutable/entry/app.Bp5a15iE.js")
+						import("./_app/immutable/entry/start.Cugkm-fu.js"),
+						import("./_app/immutable/entry/app.Bv9hURXJ.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
