--- a/index.html
+++ b/index.html
@@ -5,23 +5,23 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link href="./_app/immutable/assets/0.D0Ixt5yt.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/0.hcRvnESQ.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.CqbPctQy.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.Cugkm-fu.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Ix3FeIKd.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.NFr2n9_q.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BaIdtJ6A.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.Ce_0Mfso.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.Bv9hURXJ.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.D0Dj4GBh.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.yLzZniwc.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.B6roheC6.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.BXoeXnn5.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.BFAfwS86.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.xn1xos2W.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.eEIZ6DUg.js"><title>Home</title><!-- HEAD_svelte-t32ptj_START --><meta name="description" content="Svelte demo app"><!-- HEAD_svelte-t32ptj_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">  <div class="app svelte-8o1gnw"><header class="svelte-1owi7ln"><nav class="svelte-1owi7ln"><ul class="svelte-1owi7ln"><li aria-current="page" class="svelte-1owi7ln"><a href="/" class="svelte-1owi7ln" data-svelte-h="svelte-1pcgfga"><div class="stack svelte-1owi7ln" style="--stacks: 3;"><span style="--index: 0;" class="svelte-1owi7ln">Home</span> <span style="--index: 1;" class="svelte-1owi7ln">Home</span> <span style="--index: 2;" class="svelte-1owi7ln">Home</span></div></a></li> <li class="svelte-1owi7ln"><a href="/about" class="svelte-1owi7ln" data-svelte-h="svelte-4bflkt"><div class="stack svelte-1owi7ln" style="--stacks: 3;"><span style="--index: 0;" class="svelte-1owi7ln">About</span> <span style="--index: 1;" class="svelte-1owi7ln">About</span> <span style="--index: 2;" class="svelte-1owi7ln">About</span></div></a></li> <li class="svelte-1owi7ln"><a href="/resume" class="svelte-1owi7ln" data-svelte-h="svelte-s84fbt"><div class="stack svelte-1owi7ln" style="--stacks: 3;"><span style="--index: 0;" class="svelte-1owi7ln">Resume</span> <span style="--index: 1;" class="svelte-1owi7ln">Resume</span> <span style="--index: 2;" class="svelte-1owi7ln">Resume</span></div></a></li> <li class="svelte-1owi7ln"><a href="/projects" class="svelte-1owi7ln" data-svelte-h="svelte-fuz43h"><div class="stack svelte-1owi7ln" style="--stacks: 3;"><span style="--index: 0;" class="svelte-1owi7ln">Projects</span> <span style="--index: 1;" class="svelte-1owi7ln">Projects</span> <span style="--index: 2;" class="svelte-1owi7ln">Projects</span></div></a></li></ul></nav> </header> <main class="svelte-8o1gnw"> <section class="svelte-1hfch6o" data-svelte-h="svelte-15v7zc9"><div class="video svelte-1hfch6o"><video  autoplay loop muted poster="/_app/immutable/assets/hakone_frame1_awful.wYjVVRWW.jpg" class="svelte-1hfch6o"><source src="/_app/immutable/assets/hakone_park.Ca7bB5dJ.mp4"><track kind="captions"></video> <div class="welcome svelte-1hfch6o">Welcome :)</div></div> </section></main> <footer class="svelte-8o1gnw" data-svelte-h="svelte-clqwh4"><p>Built with <a href="https://kit.svelte.dev" target="_blank" class="svelte-8o1gnw">Svelte</a></p></footer> </div> 
+		<div style="display: contents">  <div class="app svelte-175zqc"><header class="svelte-1owi7ln"><nav class="svelte-1owi7ln"><ul class="svelte-1owi7ln"><li aria-current="page" class="svelte-1owi7ln"><a href="/" class="svelte-1owi7ln" data-svelte-h="svelte-1pcgfga"><div class="stack svelte-1owi7ln" style="--stacks: 3;"><span style="--index: 0;" class="svelte-1owi7ln">Home</span> <span style="--index: 1;" class="svelte-1owi7ln">Home</span> <span style="--index: 2;" class="svelte-1owi7ln">Home</span></div></a></li> <li class="svelte-1owi7ln"><a href="/about" class="svelte-1owi7ln" data-svelte-h="svelte-4bflkt"><div class="stack svelte-1owi7ln" style="--stacks: 3;"><span style="--index: 0;" class="svelte-1owi7ln">About</span> <span style="--index: 1;" class="svelte-1owi7ln">About</span> <span style="--index: 2;" class="svelte-1owi7ln">About</span></div></a></li> <li class="svelte-1owi7ln"><a href="/resume" class="svelte-1owi7ln" data-svelte-h="svelte-s84fbt"><div class="stack svelte-1owi7ln" style="--stacks: 3;"><span style="--index: 0;" class="svelte-1owi7ln">Resume</span> <span style="--index: 1;" class="svelte-1owi7ln">Resume</span> <span style="--index: 2;" class="svelte-1owi7ln">Resume</span></div></a></li> <li class="svelte-1owi7ln"><a href="/projects" class="svelte-1owi7ln" data-svelte-h="svelte-fuz43h"><div class="stack svelte-1owi7ln" style="--stacks: 3;"><span style="--index: 0;" class="svelte-1owi7ln">Projects</span> <span style="--index: 1;" class="svelte-1owi7ln">Projects</span> <span style="--index: 2;" class="svelte-1owi7ln">Projects</span></div></a></li></ul></nav> </header> <main class="svelte-175zqc"> <section class="svelte-1hfch6o" data-svelte-h="svelte-15v7zc9"><div class="video svelte-1hfch6o"><video  autoplay loop muted poster="/_app/immutable/assets/hakone_frame1_awful.wYjVVRWW.jpg" class="svelte-1hfch6o"><source src="/_app/immutable/assets/hakone_park.Ca7bB5dJ.mp4"><track kind="captions"></video> <div class="welcome svelte-1hfch6o">Welcome :)</div></div> </section></main> <footer class="svelte-175zqc" data-svelte-h="svelte-1vyzxzz"><a href="https://github.com/joewang704" target="_blank" class="svelte-175zqc"><i class="fa-brands fa-github"></i></a> <a href="https://www.linkedin.com/in/jw704/" target="_blank" class="svelte-175zqc"><i class="fa-brands fa-linkedin"></i></a></footer> </div> 
 			
 			<script>
 				{
-					__sveltekit_1fofsmr = {
+					__sveltekit_10ts8gj = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -30,8 +30,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.Cugkm-fu.js"),
-						import("./_app/immutable/entry/app.Bv9hURXJ.js")
+						import("./_app/immutable/entry/start.NFr2n9_q.js"),
+						import("./_app/immutable/entry/app.D0Dj4GBh.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
